--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
