--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
